fixed bug of safari
3rd section .img-text img was displayed stretched when visualizing it on safari

--- a/src/css/partials/_whyBetter-sec(3).scss
+++ b/src/css/partials/_whyBetter-sec(3).scss
@@ -52,7 +52,7 @@
 }
 
 .img-text {
-    @include flex-justify(center);
+    @include flex-justify-align(center, flex-start);
 
     img {
         width: 270px;
